--- a/package.json
+++ b/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www"
+    "devstart": "nodemon ./bin/www",
+    "test": "mocha --timeout 10000"
   },
   "dependencies": {
     "async": "^2.6.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "express-validator": "^5.3.0",
     "http-errors": "~1.6.2",
+    "mocha": "^5.2.0",
     "mongoose": "^5.3.15",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11"
